/*
 * Copyright (C) 2024 Contributors
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package cn.gdrfgdrf.connectComputer.Protobuf.Security;

import "Security/Enum/security_enum.proto";

option java_package = "cn.gdrfgdrf.Protobuf.Security";
option java_outer_classname = "SecurityProto";

message ExchangeRsaPublicKeyPacket {
    string public_key = 1;
}

message InitAesKeyPacket {
    string iv = 1;
    string key = 2;
}

message EncryptBlockPacket {
    EncryptAlgorithmEnum encrypt_algorithm = 1;
    bytes encrypted = 2;
}