syntax = "proto3";

package cn.gdrfgdrf.connectComputer.Protobuf.Action.Controller;

option java_package = "cn.gdrfgdrf.Protobuf.Action.Controller";
option java_outer_classname = "ControllerSuccessProto";

message ConnectComputerSuccessPacket {
}